fix for refelctions bar uneven bug in light mode

--- a/Reflection/wwwroot/CSS/openReflections.css
+++ b/Reflection/wwwroot/CSS/openReflections.css
@@ -187,7 +187,7 @@ span[class^="smile-desc"] {
 }*/
 
 .cnt-box {
-    width: 90px;
+    width: 11%;
     height: 24px;
     border-radius: 3px;
     margin: 1rem 1rem 0 0;
